# tiny_c

./: .gitignore  CMakeLists.txt  Makefile
examples/: main.tag
src/: as_frontend.c  ast.c  io.c  lexer.c  list.c  main.c  parser.c  tag.c  tiny_c_builtins.c  token.c  types.c  utils.c  visitor.c
src/include/: as_frontend.h  ast.h  io.h  lexer.h  list.h  macros.h  parser.h  tag.h  tiny_c_builtins.h  token.h  types.h  utils.h  visitor.h
test/: main.s
